--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 
 <body>
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+</script>
+
+
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
     <source src="mp4/bg.mp4" type="video1/mp4">
@@ -58,6 +69,16 @@
       </div>
           </div>
   </div>
+
+<ul>
+  <li>
+    <div class="fb-share-button" data-href="https://example.com/post/1" 
+         data-layout="button">FB</div>  
+</li>
+</ul>
+
+
+
   <!-- <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
