Update social share

--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
 
 <ul>
   <li>
-    <div class="fb-share-button" data-href="https://example.com/post/1" 
-         data-layout="button">FB</div>  
+    <div class="fb-share-button" data-href="http://theapolloshow.com" 
+         data-layout="button"></div>  
+</li>
+<li>
+    <div class="fb-share-button" data-href="http://theapolloshow.com/" 
+         data-layout="button"></div>  
 </li>
 </ul>
 
