Comment out multiple social share. Add ref link.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 
 </head>
 
-<body>
-
+<body> 
+<!—- social share multiple buttons. Improve when ready to publish for actual shares. To work, uncheck .h-100{height:100%!important} inspect element: div class “row h-100” —->
+<!—- https://stackoverflow.com/questions/29095897/multiple-facebook-twitter-share-buttons-in-one-page-with-custom-image-and-title —->
+<!—-
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -43,7 +45,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
-
+—->
 
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
@@ -70,6 +72,7 @@
           </div>
   </div>
 
+<!—-
 <ul>
   <li>
     <div class="fb-share-button" data-href="http://theapolloshow.com" 
@@ -80,7 +83,7 @@
          data-layout="button"></div>  
 </li>
 </ul>
-
+—->
 
 
   <!-- <div class="social-icons">
