--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 <body> 
 <!—- social share multiple buttons. Improve when ready to publish for actual shares. To work, uncheck .h-100{height:100%!important} inspect element: div class “row h-100” —->
 <!—- https://stackoverflow.com/questions/29095897/multiple-facebook-twitter-share-buttons-in-one-page-with-custom-image-and-title —->
-<!—-
-<div id="fb-root"></div>
+<!—- <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -72,8 +71,7 @@
           </div>
   </div>
 
-<!—-
-<ul>
+<!—- <ul>
   <li>
     <div class="fb-share-button" data-href="http://theapolloshow.com" 
          data-layout="button"></div>  
