--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
 <body> 
 <!—- social share multiple buttons. Improve when ready to publish for actual shares. To work, uncheck .h-100{height:100%!important} inspect element: div class “row h-100” —->
 <!—- https://stackoverflow.com/questions/29095897/multiple-facebook-twitter-share-buttons-in-one-page-with-custom-image-and-title —->
-<!—- <div id="fb-root"></div>
-<script>(function(d, s, id) {
+<!—- <div id="fb-root"></div> —->
+<!—- <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
-</script>
-—->
+</script> —->
 
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
