fix path to app.js

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
  <button onclick="newQuote()">Get Another Quote</button>
     <a class="fb-share-btn" onclick="fbShare()">Share Quote On Facebook</a>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
     <script type="text/javascript">
         document.write(newQuote());
     </script>
