--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
           <div class="masthead-content text-white py-5 py-md-0">
             <h1 class="mb-3">The Apollo Show... Coming Soon!</h1>
             <p class="mb-5">We're working hard to finish production of the show and development of this site.
-              <strong>Check back soon</strong>! </p>
-            <p>In the meantime, here's an inspirational quote:</p>
-            
-            <div id="displayQuote"></div>
+              <strong>Check back soon</strong>!...In the meantime, here's an inspirational quote: </p>
+          
+            <h2 id="displayQuote"></h2>
     <br>
- <button onclick="newQuote()">Get Another Quote</button>
-    <a class="fb-share-btn" onclick="fbShare()">Share Quote On Facebook</a>
+ <button onclick="newQuote()">Get Another Quote</button> <a class="fb-share-btn" onclick="fbShare()">Share Quote On Facebook</a>
 
     <script src="js/app.js"></script>
     <script type="text/javascript">
