--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
             <h1 class="mb-3">The Apollo Show... Coming Soon!</h1>
-            <p class="mb-5">We're working hard to finish production of the show and development of this site.
-              <strong>Check back soon</strong>!...In the meantime, here's an inspirational quote: </p>
+            <p class="mb-5">We're working on final on final touches so. <strong>Check back soon</strong>! ...In the meantime, here's an inspirational quote: </p>
           
             <h2 id="displayQuote"></h2>
     <br>
