--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta name="author" content="Apollo">
   <meta property="og:url" content="http://theapolloshow.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="The Apollo Show" />
-    <meta property="og:description" content="Welcome to The Apollo Show featuring interviews with people and exploration of cultures from around the world. " />
+    <meta property="og:title" content="Welcome to The Apollo Show" />
+    <meta property="og:description" content="Featuring interviews and exploration of cultures from around the world. " />
     <meta property="og:image" content="" />
 
   <title>The Apollo Show</title>
