--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
 </head>
 
-<body> 
+<body>
+  <div class="skipnav"><a href="#maincontent">Skip to main content</a>
+    </div>
 <!-- social share multiple buttons. Improve when ready to publish for actual shares. To work, uncheck .h-100{height:100%!important} inspect element: div class “row h-100” -->
 <!-- https://stackoverflow.com/questions/29095897/multiple-facebook-twitter-share-buttons-in-one-page-with-custom-image-and-title -->
 <!-- <div id="fb-root"></div>
@@ -56,7 +58,7 @@
     <source src="mp4/bg.mp4" type="video1/mp4">
   </video>
 
-  <div class="masthead">
+  <div class="masthead" id="maincontent">
     <div class="masthead-bg"></div>
     <div class="container h-100">
       <div class="row h-100">
@@ -67,7 +69,7 @@
           
             <h2 id="displayQuote"></h2>
     <br>
- <button onclick="newQuote()">Get Another Quote</button> <a class="fb-share-btn" onclick="fbShare()">Share Quote On Facebook</a>
+ <button onclick="newQuote()">Get Another Quote</button> <button class="fb-share-btn" onclick="fbShare()">Share Quote On Facebook</button>
 
     <script src="js/app.js"></script>
     <script type="text/javascript">
