--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <source src="mp4/bg.mp4" type="video1/mp4">
   </video>
 
-  <div class="masthead" id="maincontent">
+  <div class="masthead" id="maincontent" tabindex="-1">
     <div class="masthead-bg"></div>
     <div class="container h-100">
-      <div class="row h-100">
+  "   <div cla"s="row h-1"0""
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
             <h1 class="mb-3">The Apollo Show... Coming Soon!</h1>
